# obstacle_detector_ros2

obstacle_detector/: CMakeLists.txt  package.xml
obstacle_detector/include/obstacle_detector/: obstacle_extractor.h
obstacle_detector/launch/: demo.launch.py
obstacle_detector/src/: obstacle_extractor.cpp  scans_merger.cpp
